k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efiling
  labels:
    app.kubernetes.io/name: efiling
